# filekit-tuto-app

./: .gitlab-ci.yml  README.md  asset-manifest.json  index.html  package.json  pyproject.toml  run-ci.py  setup.py
public/: index.html
src/: App.js  Download.js  Upload.js  config.dev.js  config.prod.js  index.css
static/css/: main.57c4a6dd.chunk.css  main.57c4a6dd.chunk.css.map
static/js/: 2.fa653604.chunk.js  main.b34f3b42.chunk.js  main.b34f3b42.chunk.js.map  runtime-main.ea89c9ff.js  runtime-main.ea89c9ff.js.map
test/: conftest.py  test_filekit.py
