[tool.poetry]
name = "filekit-tuto-app"
version = "0.1.0"
description = "FileKit tutorial application"
authors = ["Tanker staff <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"

tankerci = ">= 2020.12.3123"
Faker = "^2.0.0"
ghp-import = "^0.5.5"
pytest = "^6.2.0"
selenium = "^3.141.0"
tankeradminsdk = "^0.2.1"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
